Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignIntObjTextObj.quorum
class Main
    action Main
        Text v
        v:SetValue(text)
        Test(v)
    end

    action Test(Integer var)
    end
end
